--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nodepro",
   "version": "1.0.0",
   "description": "\"# nodepro\"",
+  "main": "mysql.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./bin/www"
