--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "mysql.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "webpack-dev-server --devtool eval --progress --colors",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -18,12 +20,47 @@
   },
   "homepage": "https://github.com/xingdongyu1994/nodepro#readme",
   "dependencies": {
-    "mysql": "^2.15.0",
+    "antd": "^2.11.0",
+    "babel-polyfill": "^6.16.0",
+    "body-parser": "~1.15.1",
+    "classnames": "^2.2.5",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
-    "morgan": "~1.9.0"
+    "immutable": "^3.8.1",
+    "morgan": "~1.9.0",
+    "mysql": "^2.15.0",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-redux": "^4.4.6",
+    "react-redux-spinner": "^0.4.0",
+    "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.7",
+    "redux": "^3.6.0",
+    "redux-immutablejs": "0.0.8",
+    "redux-logger": "^2.7.4",
+    "webpack-hot-middleware": "^2.21.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "css-loader": "^0.26.0",
+    "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^3.1.0",
+    "img-loader": "^1.3.1",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
+    "mocha": "^3.1.2",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^3.10.0",
+    "webpack-clean": "^1.0.0",
+    "webpack-dev-server": "^2.11.1",
+    "webpack-parallel-uglify-plugin": "^1.0.2"
   }
 }
