--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./bin/www",
-    "dev": "webpack-dev-server --devtool eval --progress --colors",
+    "dev": "webpack-dev-server --devtool eval --progress --colors --port 1111",
     "build": "webpack"
   },
   "repository": {
