--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/xingdongyu1994/nodepro#readme",
   "dependencies": {
     "antd": "^2.11.0",
+    "antd-mobile": "^2.1.8",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.16.0",
     "body-parser": "~1.15.1",
