--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,8 @@
 {
-  "presets": [
-    "react",
-    "es2015"
-  ],
-  "plugins": [[
+  "presets": ["es2015", "stage-0", "react"],
+  "plugins": [
+    "babel-plugin-transform-decorators-legacy",
     "transform-runtime",
-    {
-      "helpers": false,
-      "polyfill": false,
-      "regenerator": true,
-      "moduleName": "babel-runtime"
-    }
-  ]]
+    ["babel-plugin-import", { "libraryName": "antd", "style": "css" }]
+  ]
 }
