--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "mysql.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./bin/www",
+    "start": "nodemon ./bin/www",
     "dev": "webpack-dev-server --devtool eval --progress --colors",
     "build": "webpack"
   },
@@ -48,13 +48,19 @@
     "webpack-hot-middleware": "^2.21.2"
   },
   "devDependencies": {
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.8",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
+    "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-jest": "^20.0.3",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-import": "^1.2.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-app": "^3.0.0",
     "babel-preset-stage-0": "^6.16.0",
+    "babel-runtime": "^6.23.0",
     "css-loader": "^0.26.0",
+    "express-session": "^1.15.6",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^3.1.0",
     "img-loader": "^1.3.1",
@@ -63,7 +69,7 @@
     "mocha": "^3.1.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^3.10.0",
+    "webpack": "^2.6.1",
     "webpack-clean": "^1.0.0",
     "webpack-dev-server": "^2.11.1",
     "webpack-parallel-uglify-plugin": "^1.0.2"
